Inconsistent string for the same action (delete vs move to trash)
Hi, it's very old string but, IMHO, we might use "%d file moved to trash" string here, instead of "%d file deleted".
"Deleted" implies a permanent lost of data. In here, we just moved files to trash, not deleted.
Source: https://gitlab.gnome.org/GNOME/nautilus/-/blob/master/src/nautilus-window.c#L1181-1195
files = nautilus_file_undo_info_trash_get_files (NAUTILUS_FILE_UNDO_INFO_TRASH (undo_info));
length = g_list_length (files);
if (length == 1)
{
file_label = g_file_get_basename (files->data);
/* Translators: only one item has been deleted and %s is its name. */
label = g_markup_printf_escaped (_("“%s” moved to trash"), file_label);
g_free (file_label);
}
else
{
/* Translators: one or more items might have been deleted, and %d
* is the count. */
label = g_markup_printf_escaped (ngettext ("%d file deleted", "%d files deleted", length), length);
}